--- a/wazly/pubspec.yaml
+++ b/wazly/pubspec.yaml
@@ -61,6 +61,11 @@ dependencies:
   fl_chart: ^0.69.0
   flutter_contacts: ^1.1.9+2
   permission_handler: ^12.0.1
+  local_auth: ^3.0.0
+  flutter_secure_storage: ^10.0.0
+  path_provider: ^2.1.5
+  file_picker: ^10.3.8
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
