--- a/wazly/pubspec.yaml
+++ b/wazly/pubspec.yaml
@@ -60,12 +60,15 @@ dependencies:
   # Charts
   fl_chart: ^0.69.0
   flutter_contacts: ^1.1.9+2
-  permission_handler: ^12.0.1
+  permission_handler: ^11.3.1
+  image_picker: ^1.0.7
   local_auth: ^3.0.0
   flutter_secure_storage: ^10.0.0
   path_provider: ^2.1.5
+  path: ^1.9.0
   file_picker: ^10.3.8
   share_plus: ^12.0.1
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
